--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,14 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Single Page App</title>
+    <link rel="stylesheet" href="./static/css/index.css" />
 </head>
 
 <body>
-    <nav class="nav">
-        <a href="/" class="nav_link" data-link>Dashboard</a>
-        <a href="/posts" class="nav_link" data-link>Posts</a>
-        <a href="/settings" class="nav_link" data-link>Settings</a>
-    </nav>
 
     <div id="app"></div>
 
